--- a/src/css/natuive.css
+++ b/src/css/natuive.css
@@ -2310,9 +2310,6 @@ main .n-nav ul {
   font-size: inherit;
   cursor: pointer;
 }
-.n-drop li:hover > input {
-  z-index: 1;
-}
 .n-drop li[aria-haspopup]:before {
   content: "";
   position: absolute;
@@ -2323,6 +2320,7 @@ main .n-nav ul {
   height: 100%;
 }
 .n-drop ul.n-list:not(.n-list--no-bullet):not(.n-list--inline) li:before {
+  /* 	    display: none; */
   content: "";
 }
 .n-drop ul.n-list:not(.n-list--no-bullet):not(.n-list--inline).n-left-side li:before {
@@ -2389,6 +2387,16 @@ main .n-nav ul {
   }
   .n-drop li li[aria-haspopup]:before, .n-drop li li > input {
     -webkit-mask-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg version='1.1' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpolygon transform='translate(8 8) rotate(90) translate(-8 -8)' points='8 0 16 16 0 16' fill='%23000' fill-rule='nonzero'/%3E%3C/g%3E%3C/svg%3E%0A");
+  }
+  .n-drop:not([data-ready]) li {
+    display: flex;
+  }
+  .n-drop:not([data-ready]) li > input {
+    position: static;
+    order: 1;
+  }
+  .n-drop:not([data-ready]) li:not([tabindex]) > ul ~ a {
+    padding-right: 0.75em;
   }
 
   html:not(.can-touch) .n-drop ul li:not([aria-expanded]) ul ul {
